Home section created and styled

--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-
     </nav>
+    <section id="home">
+        <div class="main">
+            <h1 class="headings">I AM <br> OLIVIA ADONGO</h1>
+            <button class="btn">
+                Hire me 
+            </button>
+        </div>
+        
+    </section>
     
 </body>
 </html>
