Poerfolio section created and styled

--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
             </div>
         </div>
     </section>
+
+    <section id="portfolio">
+        <h1 class="headings">PORTFOLIO</h1>
+        <div class="gallery">
+            <img src="/img//portfolio/drum.jpeg" alt="">
+            <img src="/img//portfolio/five.jpeg" alt="">
+            <img src="/img//portfolio/four.jpeg" alt="">
+            <img src="/img//portfolio/jap.png" alt="">
+            <img src="/img//portfolio/red.jpeg" alt="">
+            <img src="/img//portfolio/star.jpeg" alt="">
+        </div>
+
+    </section>
     
 </body>
 </html>
