--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
             </div>
         </div>
     </section>
+
+    <section id="contact">
+        <h1 class="headings">CONTACT</h1>
+        <form action="" class="form">
+            <input type="text" name="name"  class="input" placeholder="Enter your name">
+            <input type="email" name="email" class="input" placeholder="Enter your email">
+            <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter your message"> </textarea>
+            <input type="submit" value="SEND" id="send">
+        </form>
+    </section>
+
+    
     
 </body>
 </html>
